fixed snippets width and placement by moving "col-sm-9" class to outermost div (fixes appearance on Firefox); made the snippets' code preview overflow-x instead of wrapping formatted code; pulled out a few inline styles and added them to main.css; attempted to get more consistent spacing and formatting among html examples (but I did not alter test html files)

--- a/site/styles/main.css
+++ b/site/styles/main.css
@@ -13,6 +13,10 @@
   background-color: inherit;
 }
 
+.break-word {
+  overflow-wrap: break-word;
+}
+
 /* Examples title and summary spacing */
 .marketing h4 + p {
   margin-bottom: 28px;
@@ -33,6 +37,9 @@
 /* highlightjs */
 .hljs.javascript,
 .hljs.xml {
+  display: inline-block;
+  overflow-x: auto;
+  white-space: pre;
   font-size: 13px;
   background-color: inherit; /* only use if syntax highlighting background is light gray or near white */
 }
